@@ -20,16 +20,16 @@
 #define LIBCOAP_PACKAGE_NAME "libcoap"
 
 /* Define the full name and version of libcoap. */
-#define LIBCOAP_PACKAGE_STRING "libcoap 4.3.3"
+#define LIBCOAP_PACKAGE_STRING "libcoap 4.3.4"
 
 /* Define the home page for libcoap. */
 #define LIBCOAP_PACKAGE_URL "https://libcoap.net/"
 
 /* Define the version of libcoap this file belongs to. */
-#define LIBCOAP_PACKAGE_VERSION "4.3.3"
+#define LIBCOAP_PACKAGE_VERSION "4.3.4"
 
 /* Define the numeric version identifier for libcoap */
-#define LIBCOAP_VERSION (4003003U)
+#define LIBCOAP_VERSION (4003004U)
 
 #ifdef __cplusplus
 extern "C" {
